--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "dependencies": {
+    "@next/env": "^13.3.0",
     "axios": "^1.3.5",
+    "d3": "^7.8.4",
+    "dotenv": "^16.0.3",
+    "mapbox-gl": "^1.13.3",
     "next": "^13.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-map-gl": "^7.0.23",
+    "react-mapbox-gl": "^5.1.1",
+    "topojson": "^3.0.2"
   },
   "name": "twistandwrapf",
   "version": "1.0.0",
